--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".vim/bundle/neobundle.vim"]
 	path = .vim/bundle/neobundle.vim
 	url = git@github.com:Shougo/neobundle.vim.git
+[submodule ".vim/delimitMate"]
+	path = .vim/delimitMate
+	url = git@github.com:Raimondi/delimitMate.git
